src/test/compile-fail/native-unsafe-fn.rs
// -*- rust -*-
// error-pattern: unsafe functions can only be called

native "cdecl" mod test {
    unsafe fn free();
}

fn main() {
    let x = test::free;
}


